2009-08-17  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/ppmtomd-PrintColors.xml: Fixed choice ID.

	* opt/min12xxw-GSPageSize.xml: Removed duplicate choice entry.

	* opt/Postscript-PageSize.xml, opt/Postscript-Duplex.xml,
	  opt/Postscript-InputSlot.xml, opt/pentaxpj-Density.xml,
	  opt/bjc250gs-ComposeK.xml: Corrected ID.

	* driver/hplip.xml, printer/HP-910.xml, printer/HP-915.xml,
	  printer/HP-Business_Inkjet_1000.xml,
	  printer/HP-Business_Inkjet_1100.xml,
	  printer/HP-Business_Inkjet_1200.xml,
	  printer/HP-Business_Inkjet_2200.xml,
	  printer/HP-Business_Inkjet_2230.xml,
	  printer/HP-Color_Inkjet_Printer_CP1160.xml,
	  printer/HP-Color_Inkjet_Printer_CP1700.xml,
	  printer/HP-Color_LaserJet_5.xml,
	  printer/HP-Color_LaserJet_5000.xml,
	  printer/HP-DesignJet_ColorPro_CAD.xml,
	  printer/HP-DeskJet_1100C.xml, printer/HP-DeskJet_1120C.xml,
	  printer/HP-DeskJet_1125C.xml, printer/HP-DeskJet_1220C.xml,
	  printer/HP-DeskJet_1280.xml, printer/HP-DeskJet_3320.xml,
	  printer/HP-DeskJet_3325.xml, printer/HP-DeskJet_3420.xml,
	  printer/HP-DeskJet_3425.xml, printer/HP-DeskJet_350C.xml,
	  printer/HP-DeskJet_3520.xml, printer/HP-DeskJet_3528.xml,
	  printer/HP-DeskJet_3535.xml, printer/HP-DeskJet_3550.xml,
	  printer/HP-DeskJet_3558.xml, printer/HP-DeskJet_3650.xml,
	  printer/HP-DeskJet_3658.xml, printer/HP-DeskJet_3668.xml,
	  printer/HP-DeskJet_3740.xml, printer/HP-DeskJet_3810.xml,
	  printer/HP-DeskJet_3816.xml, printer/HP-DeskJet_3820.xml,
	  printer/HP-DeskJet_3822.xml, printer/HP-DeskJet_3840.xml,
	  printer/HP-DeskJet_3845.xml, printer/HP-DeskJet_3920.xml,
	  printer/HP-DeskJet_3940.xml, printer/HP-DeskJet_400.xml,
	  printer/HP-DeskJet_420C.xml, printer/HP-DeskJet_450.xml,
	  printer/HP-DeskJet_460.xml, printer/HP-DeskJet_500C.xml,
	  printer/HP-DeskJet_5150.xml, printer/HP-DeskJet_5158.xml,
	  printer/HP-DeskJet_5160.xml, printer/HP-DeskJet_540.xml,
	  printer/HP-DeskJet_5440.xml, printer/HP-DeskJet_5550.xml,