@@ -281,19 +281,6 @@
     </ev_shortname>
     <ev_driverval>DriverPageSize=EnvISOB5 GSPageSize=EnvISOB5</ev_driverval>
    </enum_val>
-   <enum_val id="ev/min12xxw-PageSize-w340h666">
-    <ev_longname>
-     <en>Choukei-3Gou</en>
-    </ev_longname>
-    <!-- A multilingual <comments> block can appear here, too;
-         it should be treated as documentation for the user. -->
-    <ev_shortname>
-     <en>w340h666</en>
-     <!-- Until someone tells me how to learn the user locale in 
-          backends, the shortname must be monolingual in <en>! -->
-    </ev_shortname>
-    <ev_driverval>DriverPageSize=w340h666 GSPageSize=w340h666</ev_driverval>
-   </enum_val>
    <enum_val id="ev/min12xxw-PageSize-w255h581">
     <ev_longname>
      <en>Choukei-4Gou</en>
