@@ -2,7 +2,8 @@
 
 	* opt/ppmtomd-PrintColors.xml: Fixed choice ID.
 
-	* opt/min12xxw-GSPageSize.xml: Removed duplicate choice entry.
+	* opt/min12xxw-GSPageSize.xml, opt/min12xxw-DriverPageSize.xml,
+	  opt/min12xxw-PageSize.xml: Removed duplicate choice entry.
 
 	* opt/Postscript-PageSize.xml, opt/Postscript-Duplex.xml,
 	  opt/Postscript-InputSlot.xml, opt/pentaxpj-Density.xml,
